...
        <!--Application-->
        <scene sceneID="JPo-4y-FX3">
            <objects>
                <application id="hnw-xV-0zn" sceneMemberID="viewController">
                    <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                        <items>
                            <menuItem title="Fothello" id="1Xt-HY-uBw" userLabel="Fothello">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Fothello" systemMenu="apple" id="uQy-DD-JDr">
                                    <items>
                                        <menuItem title="About Fothello" id="5kV-Vb-QxS" userLabel="About Fothello">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
...
                                                <action selector="terminate:" target="Ady-hI-5gd" id="Te7-pn-YzF"/>
                                            </connections>
                                        </menuItem>
                                    </items>
                                </menu>
                            </menuItem>
                            <menuItem title="File" id="6kj-7B-4YH">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="File" id="TsA-TB-fg0">
                                    <items>
                                        <menuItem title="New Game..." keyEquivalent="n" id="itn-kg-7Tu">
                                            <connections>
                                                <action selector="newDocument:" target="Ady-hI-5gd" id="cvP-oA-MR3"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem title="Open…" id="2ky-zo-fQP">
                                            <modifierMask key="keyEquivalentModifierMask"/>
...
                                                </items>
                                            </menu>
                                        </menuItem>
                                    </items>
                                </menu>
                            </menuItem>
                            <menuItem title="Game" id="lBN-k0-PFA" userLabel="Game">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Game" id="7zf-vO-NDL">
                                    <items>
                                        <menuItem title="Pass" keyEquivalent="P" id="0Ph-Ok-nPE">
                                            <connections>
                                                <action selector="pass:" target="Ady-hI-5gd" id="COd-IK-Nb8"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem isSeparatorItem="YES" id="0FU-jC-UlK"/>
                                        <menuItem title="Hint" keyEquivalent="H" id="ybI-Kj-FaP" userLabel="Hide">
                                            <connections>
                                                <action selector="hint:" target="Ady-hI-5gd" id="S4P-ap-ibg"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem title="Reset" keyEquivalent="R" id="cmt-tt-ZbJ">
                                            <connections>
...
                                            <menuItem title="Computer vs. Human" tag="2" id="J6J-UC-o7X">
                                                <modifierMask key="keyEquivalentModifierMask"/>
                                                <accessibility identifier="CvH"/>
                                            </menuItem>
                                            <menuItem title="Computer vs. Computer" tag="3" id="e3k-jY-KEl">
                                                <modifierMask key="keyEquivalentModifierMask"/>
                                                <accessibility identifier="CvC"/>
                                            </menuItem>
                                            <menuItem title="Game Center Match" tag="4" id="gYR-Fs-LhG">
                                                <modifierMask key="keyEquivalentModifierMask"/>
                                                <accessibility identifier="HvG"/>
                                            </menuItem>
                                        </items>
...
                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Difficulty:" id="6K7-8B-sGP">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                            </textField>
                            <button identifier="Start" focusRingType="exterior" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5fE-pA-t8G">
                                <rect key="frame" x="291" y="13" width="70" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <buttonCell key="cell" type="push" title="Start" bezelStyle="rounded" alignment="center" state="on" borderStyle="border" focusRingType="exterior" imageScaling="proportionallyDown" inset="2" id="913-OF-Hgx">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                    <string key="keyEquivalent" base64-UTF8="YES">
...
